fixed modal z-index issues and button issues

--- a/css/Sass/components/_trivia_modal.scss
+++ b/css/Sass/components/_trivia_modal.scss
@@ -15,9 +15,12 @@
    background-color: $black;
 }
 
-.modal-backdrop.in {
-	z-index: 1999;
+.crossword-page {
+	.modal-backdrop.in {
+		z-index: 1999;
+	}
 }
+
 
 .modal-trivia-dialog {
 	margin: 0;
