--- a/css/Sass/pages/_index.scss
+++ b/css/Sass/pages/_index.scss
@@ -12,12 +12,13 @@
 	position: absolute;
 	top: 0;
 	right: 0;
-	z-index: 1500;
+	z-index: 2001;
 	padding: 25px;
     color: transparent;
     background-color: transparent;
     border-color: transparent;
 }
+
 
 
 
